[package]
name = "hgvs"
version = "0.14.1"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Port of biocommons/hgvs to Rust"
license = "Apache-2.0"
homepage = "https://github.com/bihealth/hgvs-rs"
readme = "README.md"
rust-version = "1.64.0"

[lib]
name = "hgvs"
path = "src/lib.rs"

[dependencies]
base16ct = "0.2"
bio = "1.1"
chrono = "0.4"
enum-map = "2.4"
flate2 = "1.0"
lazy_static = "1.4"
log = "0.4"
md-5 = "0.10"
nom = "7.1"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
quick_cache = "0.4"
regex = "1.7"
rustc-hash = "1.1"
seqrepo = { version = "0.9", features = ["cached"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
indexmap = { version = "2", features = ["serde"] }
biocommons-bioutils = "0.1.0"

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5"
csv = "1.2"
env_logger = "0.11"
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1.3"
rstest = "0.18"
test-log = "0.2"

[[bench]]
name = "translate_cds"
harness = false
