[package]
name = "hgvs"
version = "0.17.5"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Port of biocommons/hgvs to Rust"
license = "Apache-2.0"
repository = "https://github.com/varfish-org/hgvs-rs"
readme = "README.md"
rust-version = "1.80.0"

[lib]
name = "hgvs"
path = "src/lib.rs"

[dependencies]
base16ct = "0.2"
bio = "2.0"
chrono = "0.4"
enum-map = "2.4"
flate2 = "1.0"
log = "0.4"
md-5 = "0.10"
nom = "8.0"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
quick_cache = "0.6"
regex = "1.7"
rustc-hash = "2.0"
seqrepo = { version = "0.10.3", features = ["cached"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
indexmap = { version = "2", features = ["serde"] }
biocommons-bioutils = "0.1.0"
ahash = "0.8.11"
cached = "0.54.0"

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5"
csv = "1.2"
env_logger = "0.11"
insta = { version = "1", features = ["yaml"] }
pretty_assertions = "1.3"
rstest = "0.24"
test-log = "0.2"

[[bench]]
name = "translate_cds"
harness = false
